[package]
name = "google-photo-backup"
version = "0.1.0"
authors = ["mitsuyasu-masayoshi <lightcheap358@gmail.com>"]
edition = "2021"

[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = "4.0"  # OAuth 2.0ライブラリ

tokio = { version = "1", features = ["full"] }
